--- a/Manuscripts/WorkingPapers-CohortModelsR.bib
+++ b/Manuscripts/WorkingPapers-CohortModelsR.bib
@@ -1037,3 +1037,20 @@ title = {{dampack: Decision-Analytic Modeling Package}},
 url = {https://cran.r-project.org/web/packages/dampack/ https://github.com/DARTH-git/dampack},
 year = {2021}
 }
+
+@article{Briggs2002,
+abstract = {When choosing between mutually exclusive treatment op- tions, it is common to construct a cost-effectiveness frontier on the cost-effectiveness plane that represents efficient points from among the treatment choices. Treatment options internal to the frontier are considered inefficient and are ex- cluded either by strict dominance or by appealing to the prin- ciple of extended dominance. However, when uncertainty is considered, options excluded under the baseline analysis mayform part of the cost-effectiveness frontier.Byadopting a Bayesian approach, where distributions for model parame- ters are specified, uncertainty in the decision concerning which treatment option should be implemented is addressed directly. The approach is illustrated using an example from a recently published cost-effectiveness analysis of different possible treatment strategies for gastroesophageal reflux dis- ease. It is argued that probabilistic analyses should be en- couraged because theyhavepotential to quantify the strength of evidence in favor of particular treatment choices. Key words: economic evaluation; probabilistic sensitivity analy- sis; Bayesian methods; uncertainty; simulation.},
+author = {Briggs, Andrew H. and Goeree, Ron and Blackhouse, Gord and O'Brien, Bernie J.},
+doi = {10.1177/027298902400448867},
+file = {:Users/fae/Documents/Mendeley Desktop/Briggs et al/Medical Decision Making/Briggs et al. - 2002 - Probabilistic Analysis of Cost-Effectiveness Models Choosing between Treatment Strategies for Gastroesophageal(2).pdf:pdf},
+issn = {00000000},
+journal = {Medical Decision Making},
+mendeley-groups = {Prelims/Dec Sci Prelim/Reflecting Uncertainty in CEAs,2ndSemester/PUBH{\_}6809{\_}AdvDecAnal,WorkingPapers/UQ-EMEWS},
+month = {jul},
+number = {4},
+pages = {290--308},
+title = {{Probabilistic Analysis of Cost-Effectiveness Models: Choosing between Treatment Strategies for Gastroesophageal Reflux Disease}},
+url = {http://mdm.sagepub.com/cgi/doi/10.1177/027298902400448867},
+volume = {22},
+year = {2002}
+}
